Updated all content links with thymeleaf hrefs in the support templates

--- a/src/main/resources/templates/support.html
+++ b/src/main/resources/templates/support.html
@@ -126,12 +126,12 @@
                         </a>
                         <div class="sidebar-submenu">
                             <ul>
-                                <li><a href="/web/admin/new-user">Add user</a></li>
-                                <li><a href="/web/support/list-users">List current users</a></li>
-                                <li><a href="/web/support/manage-ip">Manage suspicious IPs</a></li>
-                                <li><a href="/web/support/manage-stolencard">Manage stolen cards</a></li>
-                                <li><a href="/web/support/transaction-history">Get transaction history</a></li>
-                                <li><a href="/web/support/review-transaction">Review transactions</a></li>
+                                <li><a th:href="@{/web/admin/new-user}">Add user</a></li>
+                                <li><a th:href="@{/web/support/list-users}">List current users</a></li>
+                                <li><a th:href="@{/web/support/manage-ip}">Manage suspicious IPs</a></li>
+                                <li><a th:href="@{/web/support/manage-stolencard}">Manage stolen cards</a></li>
+                                <li><a th:href="@{/web/support/transaction-history}">Get transaction history</a></li>
+                                <li><a th:href="@{/web/support/review-transaction}">Review transactions</a></li>
                             </ul>
                         </div>
                     </li>
@@ -239,12 +239,13 @@
                     <p id="user-greeting">Hello there!</p>
                     <p>What would you like to do?</p>
                     <ul>
-                        <li><a href="/web/admin/new-user">Add user</a></li>
-                        <li><a href="/web/support/list-users">List current users</a></li>
-                        <li><a href="/web/support/manage-ip">Manage suspicious IPs</a></li>
-                        <li><a href="/web/support/manage-stolencard">Manage stolen cards</a></li>
-                        <li><a href="/web/support/transaction-history">Get a transaction history for a card number</a></li>
-                        <li><a href="/web/support/review-transaction">Review transactions</a></li>
+                        <li><a th:href="@{/web/admin/new-user}">Add user</a></li>
+                        <li><a th:href="@{/web/support/list-users}">List current users</a></li>
+                        <li><a th:href="@{/web/support/manage-ip}">Manage suspicious IPs</a></li>
+                        <li><a th:href="@{/web/support/manage-stolencard}">Manage stolen cards</a></li>
+                        <li><a th:href="@{/web/support/transaction-history}">Get the transaction history for a specific
+                            card number</a></li>
+                        <li><a th:href="@{/web/support/review-transaction}">Review transactions</a></li>
                     </ul>
                 </div>
             </div>
@@ -264,10 +265,9 @@
 </div>
 
 <!--Custom scripts-->
+<script type="text/javascript" th:src="@{/scripts/set-greeting.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/handle-side-bar.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/set-footer-text.js}"></script>
-
-<script type="text/javascript" th:src="@{/scripts/set-greeting.js}"></script>
 
 </body>
 </html>
