--- a/src/main/resources/templates/support/manage-stolencard.html
+++ b/src/main/resources/templates/support/manage-stolencard.html
@@ -126,12 +126,12 @@
                         </a>
                         <div class="sidebar-submenu">
                             <ul>
-                                <li><a href="/web/admin/new-user">Add user</a></li>
-                                <li><a href="/web/support/list-users">List current users</a></li>
-                                <li><a href="/web/support/manage-ip">Manage suspicious IPs</a></li>
-                                <li><a href="/web/support/manage-stolencard">Manage stolen cards</a></li>
-                                <li><a href="/web/support/transaction-history">Get transaction history</a></li>
-                                <li><a href="/web/support/review-transaction">Review transactions</a></li>
+                                <li><a th:href="@{/web/admin/new-user}">Add user</a></li>
+                                <li><a th:href="@{/web/support/list-users}">List current users</a></li>
+                                <li><a th:href="@{/web/support/manage-ip}">Manage suspicious IPs</a></li>
+                                <li><a th:href="@{/web/support/manage-stolencard}">Manage stolen cards</a></li>
+                                <li><a th:href="@{/web/support/transaction-history}">Get transaction history</a></li>
+                                <li><a th:href="@{/web/support/review-transaction}">Review transactions</a></li>
                             </ul>
                         </div>
                     </li>
@@ -227,7 +227,7 @@
             <div class="row">
                 <div class="form-group col-md-12">
                     <div class="form-group col-md-12">
-                        <!--Render a thymeleaf table of suspicious ips -->
+                        <!--Render a thymeleaf table of cards flagged as stolen -->
                         <p>Cards flagged as stolen</p>
                         <table class="table table-striped">
                             <thead>
@@ -247,7 +247,7 @@
                 </div>
                 <div class="form-group col-md-12">
                     <p>Manage stolen cards</p>
-                    <form action="/web/support/manage-stolencard" method="post">
+                    <form th:action="@{/web/support/manage-stolencard}" method="post">
                         <div class="form-group col-md-12">
                             <label for="stolen-card-number">Stolen card number</label>
                             <input type="text" class="form-control" id="stolen-card-number" name="stolen-card-number"
@@ -283,11 +283,9 @@
 </div>
 
 <!--Custom scripts-->
+<script type="text/javascript" th:src="@{/scripts/support/manage-stolencard.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/handle-side-bar.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/set-footer-text.js}"></script>
-<script type="text/javascript" th:src="@{/scripts/support/manage-stolencard.js}"></script>
-
-<script type="text/javascript" th:src="@{/scripts/set-greeting.js}"></script>
 
 </body>
 </html>
