--- a/src/main/resources/templates/support/list-users.html
+++ b/src/main/resources/templates/support/list-users.html
@@ -126,11 +126,12 @@
                         </a>
                         <div class="sidebar-submenu">
                             <ul>
-                                <li><a href="/web/admin/new-user">Add user</a></li>
-                                <li><a href="/web/admin/delete-user">Remove user</a></li>
-                                <li><a href="/web/support/list-users">List current users</a></li>
-                                <li><a href="/web/admin/update-role">Update user role</a></li>
-                                <li><a href="/web/admin/update-access">Update user access</a></li>
+                                <li><a th:href="@{/web/admin/new-user}">Add user</a></li>
+                                <li><a th:href="@{/web/support/list-users}">List current users</a></li>
+                                <li><a th:href="@{/web/support/manage-ip}">Manage suspicious IPs</a></li>
+                                <li><a th:href="@{/web/support/manage-stolencard}">Manage stolen cards</a></li>
+                                <li><a th:href="@{/web/support/transaction-history}">Get transaction history</a></li>
+                                <li><a th:href="@{/web/support/review-transaction}">Review transactions</a></li>
                             </ul>
                         </div>
                     </li>
@@ -225,7 +226,7 @@
             <hr>
             <div class="row">
                 <div class="form-group col-md-12">
-                    <!--Render a thymeleaf table of user and usernames-->
+                    <!--Render a thymeleaf table of users and usernames-->
                     <table class="table table-striped">
                         <thead>
                         <tr>
@@ -260,12 +261,9 @@
 </div>
 
 <!--Custom scripts-->
-<script type="text/javascript" th:src="@{/scripts/signup-new-user.js}"></script>
+<script type="text/javascript" th:src="@{/scripts/set-greeting.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/handle-side-bar.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/set-footer-text.js}"></script>
-<script type="text/javascript" th:src="@{/scripts/set-greeting.js}"></script>
-
-<script type="text/javascript" th:src="@{/scripts/admin/post-delete-user.js}"></script>
 
 </body>
 </html>
