--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -145,19 +145,7 @@
                 </div>
             </div>
             <hr>
-            <footer class="text-center">
-                <div class="mb-2">
-                    <small id="copyright-footer">
-                        © Dan Koller
-                    </small>
-                </div>
-                <div>
-                    <a href="https://github.com/dan-koller" target="_blank">
-                        <img alt="GitHub followers"
-                             src="https://img.shields.io/github/followers/dan-koller?label=github&style=social"/>
-                    </a>
-                </div>
-            </footer>
+            <footer class="text-center" th:insert="fragments/footer :: footer"></footer>
         </div>
     </main>
 </div>
