--- a/src/main/resources/templates/merchant.html
+++ b/src/main/resources/templates/merchant.html
@@ -240,17 +240,7 @@
                     </ul>
                 </div>
             </div>
-            <footer class="text-center">
-                <div class="mb-2">
-                    <small id="copyright-footer">© Dan Koller</small>
-                </div>
-                <div>
-                    <a href="https://github.com/dan-koller" target="_blank">
-                        <img alt="GitHub followers"
-                             src="https://img.shields.io/github/followers/dan-koller?label=github&style=social"/>
-                    </a>
-                </div>
-            </footer>
+            <footer class="text-center" th:insert="fragments/footer :: footer"></footer>
         </div>
     </main>
 </div>
