Outsourced content notification into a separate component
This facilitates maintainability by reducing complexity

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -74,10 +74,10 @@
     </div>
 </div>
 <div class="nav-item dropdown" th:fragment="navbar-login">
-    <a th:href="@{/#}" data-toggle="dropdown" class="btn btn-primary dropdown-toggle sign-up-btn"
+    <a th:href="@{/web/}" data-toggle="dropdown" class="btn btn-primary dropdown-toggle sign-up-btn"
        aria-expanded="false">Sign up</a>
     <div class="dropdown-menu action-form">
-        <form th:action="@{/#}" method="post">
+        <form th:action="@{/web/}" method="post">
             <p class="hint-text">Fill in this form to create your account!</p>
             <div class="form-group">
                 <input type="text" class="form-control" id="signup-name" placeholder="Your name"
