Updated html structure
Cleaned up html pages and templates for a cleaner look

--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -6,6 +6,7 @@
     <title>Content</title>
 </head>
 <body>
+<!--General content notifications area-->
 <div class="form-group col-md-12" th:fragment="content-notification">
     <div class="alert alert-success" role="alert">
         <h4 class="alert-heading">App Status</h4>
