--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -9,9 +9,7 @@
 <div th:fragment="footer">
     <footer class="text-center">
         <div class="mb-2">
-            <small id="copyright-footer">
-                © Dan Koller
-            </small>
+            <small id="copyright-footer">© Dan Koller</small>
         </div>
         <div>
             <a href="https://github.com/dan-koller" target="_blank">
