--- a/src/main/resources/templates/admin/delete-user.html
+++ b/src/main/resources/templates/admin/delete-user.html
@@ -7,12 +7,9 @@
 <body>
 <!--Dynamic navbar-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" th:replace="fragments/navbar :: navbar"></nav>
-
 <!--Main content-->
 <div class="page-wrapper chiller-theme toggled">
-    <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
-        <i class="fas fa-bars"></i>
-    </a>
+    <a id="show-sidebar" class="btn btn-sm btn-dark" href="#"><i class="fas fa-bars"></i></a>
     <!--Dynamic sidebar-->
     <nav id="sidebar" class="sidebar-wrapper" th:insert="fragments/sidebar :: sidebar-general"></nav>
     <!-- sidebar-wrapper  -->
@@ -36,11 +33,9 @@
         </div>
     </main>
 </div>
-
 <!--Custom scripts-->
 <script type="text/javascript" th:src="@{/scripts/admin/post-delete-user.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/handle-side-bar.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/set-footer-text.js}"></script>
-
 </body>
 </html>
