--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -38,9 +38,7 @@
                 <div class="input-group">
                     <input type="text" class="form-control search-menu" placeholder="Search...">
                     <div class="input-group-append">
-              <span class="input-group-text">
-                <i class="fa fa-search" aria-hidden="true"></i>
-              </span>
+                        <span class="input-group-text"><i class="fa fa-search" aria-hidden="true"></i></span>
                     </div>
                 </div>
             </div>
@@ -48,9 +46,7 @@
         <!-- sidebar-search  -->
         <div class="sidebar-menu">
             <ul>
-                <li class="header-menu">
-                    <span>General</span>
-                </li>
+                <li class="header-menu"><span>General</span></li>
                 <li class="sidebar-dropdown">
                     <a href="#">
                         <i class="fa fa-tachometer-alt"></i>
@@ -94,18 +90,10 @@
                     </a>
                     <div class="sidebar-submenu">
                         <ul>
-                            <li>
-                                <a href="#">Pie chart</a>
-                            </li>
-                            <li>
-                                <a href="#">Line chart</a>
-                            </li>
-                            <li>
-                                <a href="#">Bar chart</a>
-                            </li>
-                            <li>
-                                <a href="#">Histogram</a>
-                            </li>
+                            <li><a href="#">Pie chart</a></li>
+                            <li><a href="#">Line chart</a></li>
+                            <li><a href="#">Bar chart</a></li>
+                            <li><a href="#">Histogram</a></li>
                         </ul>
                     </div>
                 </li>
@@ -116,12 +104,8 @@
                     </a>
                     <div class="sidebar-submenu">
                         <ul>
-                            <li>
-                                <a href="#">Google maps</a>
-                            </li>
-                            <li>
-                                <a href="#">Open street map</a>
-                            </li>
+                            <li><a href="#">Google maps</a></li>
+                            <li><a href="#">Open street map</a></li>
                         </ul>
                     </div>
                 </li>
@@ -169,7 +153,6 @@
         </a>
     </div>
 </nav>
-
 <!--Admin context-->
 <ul th:fragment="admin-sidebar-links">
     <li><a th:href="@{/web/admin/new-user}">Add user</a></li>
@@ -178,25 +161,21 @@
     <li><a th:href="@{/web/admin/update-role}">Update user role</a></li>
     <li><a th:href="@{/web/admin/update-access}">Update user access</a></li>
 </ul>
-
 <ul th:fragment="admin-sidebar-dashboards">
     <li><a href="#">Custom Dashboard<span class="badge badge-pill badge-success">Pro</span></a></li>
     <li><a href="#">Server Dashboard</a></li>
     <li><a href="#">User Dashboard</a></li>
 </ul>
-
 <!--Merchant context-->
 <ul th:fragment="merchant-sidebar-links">
     <li><a th:href="@{/web/admin/new-user}">Add user</a></li>
     <li><a th:href="@{/web/merchant/new-transaction}">Post a new transaction</a></li>
 </ul>
-
 <ul th:fragment="merchant-sidebar-dashboards">
     <li><a href="#">Custom Dashboard<span class="badge badge-pill badge-success">Pro</span></a></li>
     <li><a href="#">Merchant Dashboard</a></li>
     <li><a href="#">Customer Dashboard</a></li>
 </ul>
-
 <!--Support context-->
 <ul th:fragment="support-sidebar-links">
     <li><a th:href="@{/web/admin/new-user}">Add user</a></li>
@@ -206,12 +185,10 @@
     <li><a th:href="@{/web/support/transaction-history}">Get transaction history</a></li>
     <li><a th:href="@{/web/support/review-transaction}">Review transactions</a></li>
 </ul>
-
 <ul th:fragment="support-sidebar-dashboards">
     <li><a href="#">Custom Dashboard<span class="badge badge-pill badge-success">Pro</span></a></li>
     <li><a href="#">Support Dashboard</a></li>
     <li><a href="#">User Dashboard</a></li>
 </ul>
-
 </body>
 </html>
