--- a/src/main/resources/templates/support/review-transaction.html
+++ b/src/main/resources/templates/support/review-transaction.html
@@ -7,12 +7,9 @@
 <body>
 <!--Dynamic navbar-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" th:replace="fragments/navbar :: navbar"></nav>
-
 <!--Main content-->
 <div class="page-wrapper chiller-theme toggled">
-    <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
-        <i class="fas fa-bars"></i>
-    </a>
+    <a id="show-sidebar" class="btn btn-sm btn-dark" href="#"><i class="fas fa-bars"></i></a>
     <!--Dynamic sidebar-->
     <nav id="sidebar" class="sidebar-wrapper" th:insert="fragments/sidebar :: sidebar-general"></nav>
     <!-- sidebar-wrapper  -->
@@ -53,10 +50,8 @@
                                 </table>
                             </div>
                         </div>
-                        <a href="#" target="_blank"
-                           class="btn btn-sm btn-danger mr-2">Dismiss</a>
-                        <a href="#" target="_blank"
-                           class="btn btn-sm btn-success">OK</a>
+                        <a href="#" target="_blank" class="btn btn-sm btn-danger mr-2">Dismiss</a>
+                        <a href="#" target="_blank" class="btn btn-sm btn-success">OK</a>
                     </div>
                 </div>
                 <div class="form-group col-md-12">
@@ -84,11 +79,9 @@
         </div>
     </main>
 </div>
-
 <!--Custom scripts-->
 <script type="text/javascript" th:src="@{/scripts/support/put-feedback.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/handle-side-bar.js}"></script>
 <script type="text/javascript" th:src="@{/scripts/set-footer-text.js}"></script>
-
 </body>
 </html>
