--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -120,15 +120,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a th:href="@{/web/profile}">
                         <i class="fa fa-calendar"></i>
-                        <span>Calendar</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="fa fa-folder"></i>
-                        <span>Examples</span>
+                        <span>Profile</span>
                     </a>
                 </li>
             </ul>
