--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -9,6 +9,7 @@
 <body>
 <!--General sidebar-->
 <nav id="sidebar" class="sidebar-wrapper" th:fragment="sidebar-general">
+    <script type="text/javascript" th:src="@{/scripts/handle-side-bar.js}"></script>
     <div class="sidebar-content">
         <div class="sidebar-brand">
             <a href="#">Menu</a>
