--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="form-group col-md-12" th:replace="fragments/content :: content-notification"></div>
                 <div class="form-group col-md-12">
-                    <p id="user-greeting">Hello there!</p>
+                    <p id="user-greeting" th:replace="fragments/content :: user-greeting">Hello there!</p>
                     <p>What would you like to do?</p>
                     <ul>
                         <li><a th:href="@{/web/admin/new-user}">Add a new user</a></li>
@@ -35,9 +35,5 @@
         </div>
     </main>
 </div>
-<!--Custom scripts-->
-<script type="text/javascript" th:src="@{/scripts/set-greeting.js}"></script>
-<script type="text/javascript" th:src="@{/scripts/handle-side-bar.js}"></script>
-<script type="text/javascript" th:src="@{/scripts/set-footer-text.js}"></script>
 </body>
 </html>
