--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -17,6 +17,7 @@
                      src="https://img.shields.io/github/followers/dan-koller?label=github&style=social"/>
             </a>
         </div>
+        <script type="text/javascript" th:src="@{/scripts/set-footer-text.js}"></script>
     </footer>
 </div>
 </body>
